--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Fathers and sons -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Venice (Italy) -- History -- Juvenile fiction'
+- GITenberg
 title: 'The Lion of Saint Mark: A Story of Venice in the Fourteenth Century'
 url: http://www.gutenberg.org/ebooks/17546
